src/main/resources/devops/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: rabbitmq-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 0m
spec:
  tls:
    - hosts:
        - web.rabbitmq.com
  rules:
    - host: web.rabbitmq.com
      http:
        paths:
          - path: "/"
            backend:
              serviceName: rabbitmq
              servicePort: 15672
